Modified all detectors to include normalization of SecondMoment tallies. Added R(rho) second moment unit test for analog, DAW and CAW. Modified DetectorIO to output SecondMoment with filename + "_2" name.

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -286,6 +286,7 @@
     <Compile Include="MonteCarlo\IO\DatabaseReader.cs" />
     <Compile Include="MonteCarlo\IO\DatabaseOfT.cs" />
     <Compile Include="MonteCarlo\IO\DetectorIO.cs" />
+    <Compile Include="MonteCarlo\Helpers\ErrorCalculation.cs" />
     <Compile Include="MonteCarlo\PhotonData\CollisionInfo.cs" />
     <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabase.cs" />
     <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseWriter.cs" />
