Added DirectionalLineSourceInput and changed the names of "BeamFWHM" and "DoRotationandTranslationForGivenFlags"
--HG--
branch : dc-110311-source_restructuring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -526,14 +526,17 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationOptions.cs">
       <Link>MonteCarlo\DataStructures\SimulationOptions.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\CustomPointSourceInput.cs">
-      <Link>MonteCarlo\DataStructures\SourceInputs\CustomPointSourceInput.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\LineSourceInputs\DirectionalLineSourceInput.cs">
+      <Link>MonteCarlo\DataStructures\SourceInputs\LineSourceInputs\DirectionalLineSourceInput.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\DirectionalPointSourceInput.cs">
-      <Link>MonteCarlo\DataStructures\SourceInputs\DirectionalPointSourceInput.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\CustomPointSourceInput.cs">
+      <Link>MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\CustomPointSourceInput.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\IsotropicPointSourceInput.cs">
-      <Link>MonteCarlo\DataStructures\SourceInputs\IsotropicPointSourceInput.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\DirectionalPointSourceInput.cs">
+      <Link>MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\DirectionalPointSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInput.cs">
+      <Link>MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInput.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInput.cs">
       <Link>MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInput.cs</Link>
